.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    description: elas-official
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: elas-official.soco.ude.systems
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: 2-api-gateway
            port:
              number: 8000
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 8080
  tls:
  - hosts:
    - elas-official.soco.ude.systems
    secretName: web-tls-crt
